--- a/shapeCollectionDesign.css
+++ b/shapeCollectionDesign.css
@@ -20,6 +20,7 @@ section {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    font-size: 2rem;
 }
 
 img {
@@ -39,6 +40,7 @@ img {
     display : flex;
     flex-direction: column;
     justify-content: center;
+    padding: 20px;
 }
 
 @media (max-width: 600px) {
