--- a/shapeCollectionDesign.css
+++ b/shapeCollectionDesign.css
@@ -4,14 +4,22 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #985db5;
+    background-color: #ff8a00;
+    background-image: url(Assets/body-bg.jpg);
+    background-repeat: no-repeat;
+    flex-direction: column;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 header {
     background-color: #ff413a;
+    background-image: url(Assets/header-bg.jpg);
     padding: 30px;
     text-align: center;
     font-size: 35px;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 section {
@@ -21,6 +29,7 @@ section {
     justify-content: space-around;
     flex-wrap: wrap;
     font-size: 2rem;
+    margin-top: 100px;
 }
 
 img {
@@ -32,7 +41,7 @@ img {
     display: flex;
     flex-grow: 1;
     justify-content: space-around;
-    background-color: #ff8a00;
+    background-color: #985db5;
     text-align: center;
     margin: 20px;
 }
@@ -45,23 +54,33 @@ img {
 }
 
 @media (max-width: 1000px) {
-    .datacontainer {
-        background-color: #ff8a00;
-        border-radius: 27% 27% 0 0;
+    header {
+        background-color: #ff413a;
+        padding: 30px;
+        text-align: center;
+        font-size: 1.5rem;
     }
 
     img {
-        width: 200px;
-        height: 200px;
+        width: 300px;
+        height: 300px;
     }
 
     .shape {
         display: flex;
-        border-radius: 50%;
+        width: 75%;
         justify-content: center;
         flex-direction: column;
-        background-color: #ff8a00;
+        background-color: #985db5;
         text-align: center;
         margin : 20px;
+    }
+}
+
+@media (max-width: 1000px) {
+
+    img {
+        width: 200px;
+        height: 200px;
     }
 }
